--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
